--- a/ArtBookProject/Base.lproj/Main.storyboard
+++ b/ArtBookProject/Base.lproj/Main.storyboard
@@ -1,24 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4du-4U-ohb">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ArtBookProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4mb-Ea-Mb9">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4mb-Ea-Mb9" secondAttribute="bottom" id="7Hd-ui-8aW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4mb-Ea-Mb9" secondAttribute="trailing" id="UTz-8V-jAB"/>
+                            <constraint firstItem="4mb-Ea-Mb9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="UW1-lE-TWR"/>
+                            <constraint firstItem="4mb-Ea-Mb9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iTw-0V-Nhn"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Ub3-k0-ORR"/>
+                    <connections>
+                        <outlet property="tableView" destination="4mb-Ea-Mb9" id="Ua9-oF-P15"/>
+                        <segue destination="aBF-9h-znH" kind="show" identifier="toDetailsVC" id="hX2-lB-f9e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="944.92753623188412" y="93.75"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="gKc-aJ-3mv">
+            <objects>
+                <viewController id="aBF-9h-znH" customClass="DetailsVC" customModule="ArtBookProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eQJ-AN-lDc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="select.png" translatesAutoresizingMaskIntoConstraints="NO" id="QBd-mg-vP4">
+                                <rect key="frame" x="26" y="116" width="362" height="278"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="362" id="2dY-z6-89N"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="278" id="QLd-q9-Tfi"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="362" id="Ygx-4o-c1M"/>
+                                    <constraint firstAttribute="height" constant="278" id="gBh-py-LcB"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cdA-gh-91W">
+                                <rect key="frame" x="61" y="431" width="293" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Artist" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4ZP-gA-FYA">
+                                <rect key="frame" x="61" y="497" width="293" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cD9-ns-IuR">
+                                <rect key="frame" x="60.5" y="563" width="293" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="293" id="dOe-gI-xiK"/>
+                                    <constraint firstAttribute="height" constant="34" id="iI3-mh-gJg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLQ-2s-ild">
+                                <rect key="frame" x="149" y="633" width="117" height="78"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="aBF-9h-znH" eventType="touchUpInside" id="LBd-5z-zHm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wqp-VP-Wph"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QBd-mg-vP4" firstAttribute="leading" secondItem="wqp-VP-Wph" secondAttribute="leading" constant="26" id="5Co-Re-klh"/>
+                            <constraint firstItem="wqp-VP-Wph" firstAttribute="bottom" secondItem="cD9-ns-IuR" secondAttribute="bottom" constant="265" id="BWH-wn-r0U"/>
+                            <constraint firstItem="4ZP-gA-FYA" firstAttribute="top" secondItem="cdA-gh-91W" secondAttribute="bottom" constant="32" id="C6o-Xk-zLp"/>
+                            <constraint firstItem="gLQ-2s-ild" firstAttribute="leading" secondItem="wqp-VP-Wph" secondAttribute="leading" constant="149" id="GZO-lu-gqO"/>
+                            <constraint firstItem="cD9-ns-IuR" firstAttribute="centerX" secondItem="wqp-VP-Wph" secondAttribute="centerX" id="L8J-Cj-hOY"/>
+                            <constraint firstItem="cdA-gh-91W" firstAttribute="leading" secondItem="4ZP-gA-FYA" secondAttribute="leading" id="LFp-Qy-e9B"/>
+                            <constraint firstItem="gLQ-2s-ild" firstAttribute="centerX" secondItem="cD9-ns-IuR" secondAttribute="centerX" id="WT4-UR-Y1L"/>
+                            <constraint firstItem="cdA-gh-91W" firstAttribute="top" secondItem="QBd-mg-vP4" secondAttribute="bottom" constant="37" id="WzI-AI-xtR"/>
+                            <constraint firstItem="4ZP-gA-FYA" firstAttribute="centerX" secondItem="cD9-ns-IuR" secondAttribute="centerX" id="XVJ-87-Mqc"/>
+                            <constraint firstItem="cdA-gh-91W" firstAttribute="leading" secondItem="wqp-VP-Wph" secondAttribute="leading" constant="61" id="aaL-VT-Yto"/>
+                            <constraint firstItem="wqp-VP-Wph" firstAttribute="bottom" secondItem="gLQ-2s-ild" secondAttribute="bottom" constant="151" id="cIN-KV-2Z3"/>
+                            <constraint firstItem="QBd-mg-vP4" firstAttribute="centerX" secondItem="cdA-gh-91W" secondAttribute="centerX" id="iZw-Q4-k5V"/>
+                            <constraint firstItem="cdA-gh-91W" firstAttribute="centerY" secondItem="eQJ-AN-lDc" secondAttribute="centerY" id="mgJ-qR-myj"/>
+                            <constraint firstItem="cdA-gh-91W" firstAttribute="trailing" secondItem="4ZP-gA-FYA" secondAttribute="trailing" id="uq2-cb-xbt"/>
+                            <constraint firstItem="QBd-mg-vP4" firstAttribute="top" secondItem="wqp-VP-Wph" secondAttribute="top" constant="28" id="zOc-8t-KBp"/>
+                            <constraint firstItem="gLQ-2s-ild" firstAttribute="top" secondItem="cD9-ns-IuR" secondAttribute="bottom" constant="36" id="zUb-Hj-e3H"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ZjR-16-o4x"/>
+                    <connections>
+                        <outlet property="artistTextField" destination="4ZP-gA-FYA" id="ELK-7Z-Mzv"/>
+                        <outlet property="imageView" destination="QBd-mg-vP4" id="8Jp-a6-syl"/>
+                        <outlet property="nameTextField" destination="cdA-gh-91W" id="MUI-dR-7gA"/>
+                        <outlet property="saveButton" destination="gLQ-2s-ild" id="TK7-Sy-0sD"/>
+                        <outlet property="yearTextField" destination="cD9-ns-IuR" id="Ky3-oa-6Lr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YV4-o2-ri8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1708.6956521739132" y="97.767857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RY9-JE-hgm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4du-4U-ohb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bs1-G6-uc4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qra-kT-WF8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="odA-xZ-Q9b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="select.png" width="264" height="300"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
